added temporary compilation command

--- a/src/Modules_remise_a_niveau/td_1.tex
+++ b/src/Modules_remise_a_niveau/td_1.tex
@@ -1,3 +1,4 @@
+%latexmk td_main.tex -pdf -shell-escape -output-directory=tmp_out
 \subsection*{Graphes}\label{subsec:ss_1}
 \addcontentsline{toc}{subsection}{\nameref{subsec:ss_1}}
 
