--- a/src/Modules_remise_a_niveau/td_main.tex
+++ b/src/Modules_remise_a_niveau/td_main.tex
@@ -8,7 +8,7 @@
 % compilation command
 % pdflatex td_main.tex -pdf -shell-escape -output-directory=tmp_out
 
-\title{\color{astral} \sffamily \bfseries CAPES Remise à niveau --- TDs}
+\title{\color{astral} \sffamily \bfseries TD CAPES / Remise à niveau M1}
 \author{Ivan Lejeune}
 \date{\today}
 
