--- a/src/Modules_remise_a_niveau/td_main.tex
+++ b/src/Modules_remise_a_niveau/td_main.tex
@@ -3,7 +3,7 @@
 \input{../common/common_header.tex}
 \input{../common/macros/math.tex}
 \input{../common/macros/theorems.tex}
-% \input{../assets/module_header.tex}
+\input{./assets/module_header.tex}
 \usepackage[a4paper,hmargin=30mm,vmargin=30mm]{geometry}
 % compilation command
 % pdflatex td_main.tex -pdf -shell-escape -output-directory=tmp_out
