maj td template

--- a/templates/td_XX.tex
+++ b/templates/td_XX.tex
@@ -8,7 +8,7 @@ Exercise 1 content
 
 % ----- Solutions exo 1 ----- %
 \iftoggle{showsolutions}{
-	\begin{td-sol}[] %
+	\begin{td-sol}[]\ %
 		Exercice solution
 	\end{td-sol}
 }{}
@@ -21,7 +21,7 @@ Exercise 2 content
 
 % ----- Solutions exo 2 ----- %
 \iftoggle{showsolutions}{
-	\begin{td-sol}[] %
+	\begin{td-sol}[]\ %
 		Exercice solution
 	\end{td-sol}
 }{}
