added placeholders for missing content and removed redundant exercice titles

--- a/src/Modules_remise_a_niveau/td_1.tex
+++ b/src/Modules_remise_a_niveau/td_1.tex
@@ -20,6 +20,7 @@
 	\end{td-sol}
 }{}
 
+
 % ----- Consignes exo 2 ----- %
 \begin{td-exo}[] % 2
     Calculez les paramètres \(n\) (nombre de sommets), 
@@ -173,31 +174,28 @@ Dessinez les graphes suivants:
 }{}
 
 
-
-
-
-% ----- Consignes exo 10 ----- %
-\begin{td-exo}[Exercice 10] % 10
-Un \(n\)-cube ou (hypercube de dimension \(n\)) est un graphe dont les sommets représentent les éléments de \({\{0,1\}}^n\)
-et deux sommets sont adjacents si et seulement si les \(n\)-uplets correspondants diffèrent en exactement une composante. 
-Montrer que:
-\begin{enumerate}
-    \item Le \(n\)-cube possède \(2^n\) sommets,
-    \item Le \(n\)-cube est \(n\)-régulier,
-    \item Le nombre d'arêtes est \(n\cdot 2^{n-1}\).
-\end{enumerate}
-Représenter le 1-cube, le 2-cube et le 3-cube
+% ----- Consignes exo 5 ----- %
+\begin{td-exo}[] % 5
+Exercise 5 content
 \end{td-exo}
 
-% ----- Solutions exo 10 ----- %
+% ----- Solutions exo 5 ----- %
 \iftoggle{showsolutions}{
-	\begin{td-sol}[] %
-        \begin{enumerate}
-            \item Il y a exactement \(2^n\) \(n\)-uplets dans \({\{0,1\}}^n\) donc un \(n\)-cube a exactement \(2^n\) sommets.
-            \item Il y a exactement \(n\) \(n\)-uplets qui diffèrent d'un sommet en exactement une composante (il suffit d'inverser une de ses composantes).
-            \item Chaque sommet a \(n\) voisins et chaque arête est comptée 2 fois donc \(n*2^n / 2 = n2^{n-1}\).
-            \item le 1 cube est une ligne reliant 2 points le 2 un carré et le 3 un cube. %chktex 17, faire la representation graphique
-        \end{enumerate}
+	\begin{td-sol}[] % 5
+		Exercice solution
+	\end{td-sol}
+}{}
+
+
+% ----- Consignes exo 6 ----- %
+\begin{td-exo}[] % 6
+Exercise 6 content
+\end{td-exo}
+
+% ----- Solutions exo 6 ----- %
+\iftoggle{showsolutions}{
+	\begin{td-sol}[] % 6
+		Exercice solution
 	\end{td-sol}
 }{}
 
@@ -263,8 +261,34 @@ Représenter le 1-cube, le 2-cube et le 3-cube
 }{}
 
 
+% ----- Consignes exo 10 ----- %
+\begin{td-exo}[] % 10
+Un \(n\)-cube ou (hypercube de dimension \(n\)) est un graphe dont les sommets représentent les éléments de \({\{0,1\}}^n\)
+et deux sommets sont adjacents si et seulement si les \(n\)-uplets correspondants diffèrent en exactement une composante. 
+Montrer que:
+\begin{enumerate}
+    \item Le \(n\)-cube possède \(2^n\) sommets,
+    \item Le \(n\)-cube est \(n\)-régulier,
+    \item Le nombre d'arêtes est \(n\cdot 2^{n-1}\).
+\end{enumerate}
+Représenter le 1-cube, le 2-cube et le 3-cube
+\end{td-exo}
+
+% ----- Solutions exo 10 ----- %
+\iftoggle{showsolutions}{
+	\begin{td-sol}[] %
+        \begin{enumerate}
+            \item Il y a exactement \(2^n\) \(n\)-uplets dans \({\{0,1\}}^n\) donc un \(n\)-cube a exactement \(2^n\) sommets.
+            \item Il y a exactement \(n\) \(n\)-uplets qui diffèrent d'un sommet en exactement une composante (il suffit d'inverser une de ses composantes).
+            \item Chaque sommet a \(n\) voisins et chaque arête est comptée 2 fois donc \(n*2^n / 2 = n2^{n-1}\).
+            \item le 1 cube est une ligne reliant 2 points le 2 un carré et le 3 un cube. %chktex 17, faire la representation graphique
+        \end{enumerate}
+	\end{td-sol}
+}{}
+
+
 % ----- Consignes exo 11 ----- %
-\begin{td-exo}[Exercice 11] % 11
+\begin{td-exo}[] % 11
     Montrer que tout arbre d'ordre \(n>1\) a au moins 2 sommets pendants (un sommet pendant est un sommet de degré 1).
 \end{td-exo}
 
@@ -277,8 +301,60 @@ Représenter le 1-cube, le 2-cube et le 3-cube
 }{}
 
 
+% ----- Consignes exo 12 ----- %
+\begin{td-exo}[] % 12
+Exercise 12 content
+\end{td-exo}
+
+% ----- Solutions exo 12 ----- %
+\iftoggle{showsolutions}{
+	\begin{td-sol}[] % 12
+		Exercice solution
+	\end{td-sol}
+}{}
+
+
+% ----- Consignes exo 13 ----- %
+\begin{td-exo}[] % 13
+Exercise 13 content
+\end{td-exo}
+
+% ----- Solutions exo 13 ----- %
+\iftoggle{showsolutions}{
+	\begin{td-sol}[] % 13
+		Exercice solution
+	\end{td-sol}
+}{}
+
+
+% ----- Consignes exo 14 ----- %
+\begin{td-exo}[] % 14
+Exercise 14 content
+\end{td-exo}
+
+% ----- Solutions exo 14 ----- %
+\iftoggle{showsolutions}{
+	\begin{td-sol}[] % 14
+		Exercice solution
+	\end{td-sol}
+}{}
+
+
+% ----- Consignes exo 15 ----- %
+\begin{td-exo}[] % 15
+Exercise 15 content
+\end{td-exo}
+
+% ----- Solutions exo 15 ----- %
+\iftoggle{showsolutions}{
+	\begin{td-sol}[] % 15
+		Exercice solution
+	\end{td-sol}
+}{}
+
+
 % ----- Consignes exo 16 ----- %
-\begin{td-exo}[Exercice 16] % 16
+\begin{td-exo}[] % 16
     Soient \(G_1 = (X_1, A_1)\) et \(G_2 = (X_2, A_2)\) les graphes suivants:
 
     % inserer graphes ici
@@ -310,7 +386,7 @@ Représenter le 1-cube, le 2-cube et le 3-cube
 
 
 % ----- Consignes exo 17 ----- %
-\begin{td-exo}[Exercice 17] % 17
+\begin{td-exo}[] % 17
     a completer, penser à rajouter les packages pour faire des algorithmes
 \end{td-exo}
 
