fix major issue

--- a/src/Modules_remise_a_niveau/td_1.tex
+++ b/src/Modules_remise_a_niveau/td_1.tex
@@ -250,10 +250,10 @@ Exercise 6 content
             \begin{aligned}
                 x_n &= n-1\\
                 x_{n-1} &= n-2\\
-                &\vdots\\
+                &\hspace{1.5mm}\vdots\\
                 x_2 &= 1\\
                 x_1 &= 0
-            \end{aligned}
+            \end{aligned}%
         \end{equation*}
         Or, \(x_n\) est relié à tous les sommets, donc en particulier à \(x_1\), mais celui-ci est de degré 0. 
         Il y a donc contradiction et il existe au moins deux sommets de même degré
