--- a/src/HAI722I/tds/td_1.tex
+++ b/src/HAI722I/tds/td_1.tex
@@ -1,5 +1,4 @@
-\subsection*{Convexité: ensembles et fonctions}\label{subsec:ss_1}
-\addcontentsline{toc}{subsection}{\nameref{subsec:ss_1}}
+\subsection{Convexité: ensembles et fonctions}\label{subsec:ss_1}
 
 % ----- Consignes exo 1 ----- %
 \begin{td-exo}[Convexité] % 1
@@ -77,9 +76,9 @@ Exercise 2 content
 		\begin{enumerate}
 			\item Non. Par exemple, le sous-ensemble \(S\) suivant:
 			\begin{equation*}
-				S = \left\{ x \in \bb R \mid x = \sum_{i=1}^n \frac{1}{2^i}, n \in \bb N \right\} = \left\{ 0, \frac{1}{2}, \frac{1}{4}, \frac{3}{4}, \ldots \right\}
+				S = \left\{ x \in \ff{0,1} \mid x = \sum_{i=I} \frac{1}{2^i} \right\} = \left\{ 0, \frac{1}{2}, \frac{1}{4}, \frac{3}{4}, \ldots \right\}
 			\end{equation*}
-			vérifie la propriété de demi-somme mais n'est pas convexe, car par exemple \(\sqrt{2}/2 \in [0,1] \notin S\).
+			vérifie la propriété de demi-somme mais n'est pas convexe, car par exemple \(\sqrt{2}/2 \in \ff{0,1} \notin S\).
 		\end{enumerate}
 	\end{td-sol}
 }{}
