--- a/src/HAI701I/tds/td_main.tex
+++ b/src/HAI701I/tds/td_main.tex
@@ -3,10 +3,10 @@
 \input{../../common/common_header.tex}
 \input{../../common/macros/math.tex}
 \input{../../common/macros/theorems.tex}
-\input{../assets/module_header.tex}
+% \input{../assets/module_header.tex}
 \usepackage[a4paper,hmargin=30mm,vmargin=30mm]{geometry}
 
-\title{\color{astral} \sffamily \bfseries HAI722I --- TDs}
+\title{\color{astral} \sffamily \bfseries Course Name --- TDs}
 \author{Ivan Lejeune}
 \date{\today}
 
@@ -19,7 +19,7 @@
     \tableofcontents
 
     \newpage
-    \section*{TD1}\label{sec:TD1}
+    \section*{TD1 --- Résolution de problèmes\\Modélisation et recherche aveugle}\label{sec:TD1}
     \addcontentsline{toc}{section}{\nameref{sec:TD1}}
     \setcounter{section}{1}
     \setcounter{tdcounter}{0}
