--- a/src/HAI701I/tds/td_main.tex
+++ b/src/HAI701I/tds/td_main.tex
@@ -19,7 +19,7 @@
     \tableofcontents
 
     \newpage
-    \section*{TD1 --- Résolution de problèmes\\Modélisation et recherche aveugle}\label{sec:TD1}
+    \section*{TD1 --- Résolution de problèmes --- Modélisation et recherche aveugle}\label{sec:TD1}
     \addcontentsline{toc}{section}{\nameref{sec:TD1}}
     \setcounter{section}{1}
     \setcounter{tdcounter}{0}
