--- a/src/HAI702I/tds/td_1.tex
+++ b/src/HAI702I/tds/td_1.tex
@@ -1,30 +1,108 @@
 Les exercices ou les questions marqués d'une étoile ne sont pas prioritaires.
 % ----- Consignes exo 1 ----- %
 \begin{td-exo}[] \,\\% 1
-	Déterminer une base orthonormale directe done le premier vecteur est colinéaire au vecteur 
+	Déterminer une base orthonormale directe dont le premier vecteur est colinéaire au vecteur 
 	\((1, 2, 2)\).
 \end{td-exo}
 
 % ----- Solutions exo 1 ----- %
 \iftoggle{showsolutions}{
 	\begin{td-sol}[]\ %
-		On pose \(u = \frac{1}{3}(1, 2, 2)\), 
-		c'est à dire celui imposé puis normalisé.
+		On rappelle les définitions importantes:
+		\begin{itemize}
+			\item Deux vecteurs \(u\) et \(v\) sont orthogonaux si \(\langle u, v \rangle = 0\).
 
-		Ensuite on veut \(v\) orthogonal à \(u\) et de norme \(1\).
+			\item Une base est orthonormale si ses vecteurs sont de norme \(1\) et deux à deux orthogonaux.
 
-		Il faut donc \(\langle u, v\rangle = 0\), soit \((0,1,-1)\).
+			\item Une base est directe si le produit vectoriel du premier vecteur par le deuxième donne le troisième.
+		\end{itemize}
 
-		On le normalise en divisant par \(\sqrt{2}\): \(v = \frac{1}{\sqrt{2}}(0, 1, -1)\).
-
-		Pour \(w\) on peut faire le produit vectoriel \(u \wedge v\):
-		
-		On trouve \(w = \frac{1}{3\sqrt{2}}(4, 1, 1)\).
-
-		On pose alors notre base orthonormale directe:
+		Commençons par choisir notre premier vecteur \(u\).
+		On veut \(u\) colinéaire à \((1, 2, 2)\) donc on a
 		\begin{equation*}
-			\mathcal B = \left(u, v, w\right) = \left(\frac{1}{3}(1, 2, 2), \frac{1}{\sqrt{2}}(0, 1, -1), \frac{1}{3\sqrt{2}}(4, 1, 1)\right).
+			u = \lambda(1, 2, 2),\quad \lambda \in \bb R^*.
 		\end{equation*}
+		Ensuite on veut que \(u\) soit de norme \(1\):
+		\begin{equation*}
+			\begin{aligned}
+				\nn{u} = 1 
+				& \iff \sqrt{\sum_{i=1}^3 u_i^2} = 1\\
+				& \iff \sum_{i=1}^3 u_i^2 = 1\\
+				& \iff \lambda^2(1^2 + 2^2 + 2^2) = 1\\
+				& \iff 9\lambda^2 = 1\\
+				& \iff \lambda = \pm\frac{1}{3}.
+			\end{aligned}
+		\end{equation*}
+		On prend \(\lambda = \frac{1}{3}\), donc
+		\begin{equation*}
+			\boxed{u = \frac{1}{3}(1, 2, 2)}.
+		\end{equation*}
+
+		Ensuite on veut choisir \(v\). Il faut que \(v\) soit orthogonal à \(u\):
+		\begin{equation*}
+			\langle u, v \rangle = 0.
+		\end{equation*}
+		Si on note \(v' = (x, y, z)\), on a:
+		\begin{equation*}
+			\begin{aligned}
+				\langle u, v' \rangle = 0
+				& \iff \frac{1}{3}(1, 2, 2) \cdot (x, y, z) = 0
+				& \iff \frac{1}{3}(x + 2y + 2z) = 0.
+				& \iff x + 2y + 2z = 0.
+			\end{aligned}
+		\end{equation*}
+
+		Pour des questions de simplicité, on peut choisir \(x = 0, y = 1\) et \(z = -1\).
+		Il faut ensuite normaliser \(v'\) pour obtenir \(v\).
+		\begin{equation*}
+			\nn{v'} = \sqrt{0^2 + 1^2 + {(-1)}^2} = \sqrt{2}.
+		\end{equation*}
+		On peut alors prendre \(\boxed{v = \frac{1}{\sqrt{2}}(0, 1, -1)}\).
+
+		Enfin, pour \(w\), on peut faire le produit vectoriel \(u \wedge v\) pour être sûr que la base soit directe.
+		Il y a plusieurs manières de faire le calcul, ici on utilise le déterminant:
+		% description step by steop
+		\begin{equation*}
+			w = u \wedge v = 
+			\begin{vmatrix}
+				e_1 & e_2 & e_3\\
+				\frac{1}{3} & \frac{2}{3} & \frac{2}{3}\\
+				0 & \frac{1}{\sqrt{2}} & -\frac{1}{\sqrt{2}}
+			\end{vmatrix}
+			= e_1
+			\begin{vmatrix}
+				\frac{2}{3} & \frac{2}{3}\\
+				\frac{1}{\sqrt{2}} & -\frac{1}{\sqrt{2}}
+			\end{vmatrix}
+			- e_2
+			\begin{vmatrix}
+				\frac{1}{3} & \frac{2}{3}\\
+				0 & -\frac{1}{\sqrt{2}}
+			\end{vmatrix}
+			+ e_3
+			\begin{vmatrix}
+				\frac{1}{3} & \frac{2}{3}\\
+				0 & \frac{1}{\sqrt{2}}
+			\end{vmatrix}.
+		\end{equation*}
+		On trouve:
+		\begin{equation*}
+			\boxed{w = \frac{1}{3\sqrt{2}}(-4, 1, 1)}.
+		\end{equation*}
+
+		On a alors notre base orthonormale directe:
+		\begin{equation*}
+			\boxed{\mathcal B = \left(u, v, w\right) = \left(\frac{1}{3}(1, 2, 2), \frac{1}{\sqrt{2}}(0, 1, -1), \frac{1}{3\sqrt{2}}(-4, 1, 1)\right)}.
+		\end{equation*}
+
+		On peut vérifier rapidement qu'on a bien:
+		\begin{itemize}
+			\item \(\nn{u} = 1\), \(\nn{v} = 1\) et \(\nn{w} = 1\).
+
+			\item \(\langle u, v \rangle = 0\), \(\langle u, w \rangle = 0\) et \(\langle v, w \rangle = 0\).
+
+			\item \(u \wedge v = w\).
+		\end{itemize}
 	\end{td-sol}
 }{}
 
@@ -44,8 +122,29 @@ Les exercices ou les questions marqués d'une étoile ne sont pas prioritaires.
 % ----- Solutions exo 2 ----- %
 \iftoggle{showsolutions}{
 	\begin{td-sol}[]\ %
-		On trouve assez vite que \(-1\) est solution.
-		C'est la seule solution réelle, prouvable avec factorisation puis delta.
+		Trois vecteurs sont coplanaires si et seulement si la 
+		matrice formée par ces vecteurs a un déterminant nul.
+		Ici on a:
+		\begin{equation*}
+			\begin{vmatrix}
+				1 & 0 & a\\
+				a & 1 & 0\\
+				0 & a & 1
+			\end{vmatrix}
+			= 1 + a^3.
+		\end{equation*}
+		On cherche donc les valeurs de \(a\) telles que:
+		\begin{equation*}
+			1 + a^3 = 0 \iff a^3 = -1 \iff a = -1.
+		\end{equation*}
+		Il n'y a pas d'autres solutions réelles. On peut le
+		vérifier en factorisant \(a^3 + 1\):
+		\begin{equation*}
+			a^3 + 1 = (a + 1)(a^2 - a + 1).
+		\end{equation*}
+		où \(a^2 - a + 1\) n'a pas de racines réelles.
+
+		Donc les vecteurs sont coplanaires si et seulement si \(\boxed{a = -1}\).
 	\end{td-sol}
 }{}
 
@@ -98,9 +197,145 @@ Les exercices ou les questions marqués d'une étoile ne sont pas prioritaires.
 \iftoggle{showsolutions}{
 	\begin{td-sol}[]\ %
 		\begin{enumerate}
-			\item La distance de \(M\) à la droite \(\mathcal D\) est donnée par la formule:
+			\item Il y a plusieurs manières de calculer la distance d'un point à une droite.
+
+			Première méthode: on cherche le point \(X\) de la droite \(\mathcal D\) tel que le segment \(MX\) soit orthogonal à la droite.
+			Le point \(X\) de la droite \(\mathcal D\) s'écrit:
 			\begin{equation*}
-				d(M, \mathcal D) = \frac{\norm{AM \wedge u}}{\norm{u}} = \frac{\sqrt{30}}{\sqrt{5}} = \sqrt{6}.
+				X = A + \lambda u = (1, 3, -2) + \lambda(2, 1, 0) = (1 + 2\lambda, 3 + \lambda, -2).
+			\end{equation*}
+			On cherche \(\lambda\) tel que \(MX\) soit orthogonal à \(u\), c'est-à-dire:
+			\begin{equation*}
+				\begin{aligned}
+					&\langle MX, u \rangle = 0\\
+					\iff & \langle X - M, u \rangle = 0\\
+					\iff & \langle (1 + 2\lambda - 1, 3 + \lambda - 2, -2 - 3), (2, 1, 0) \rangle = 0\\
+					\iff & \langle (2\lambda, 1 + \lambda, -5), (2, 1, 0) \rangle = 0\\
+					\iff & 4\lambda + 1 + \lambda = 0\\
+					\iff & 5\lambda + 1 = 0\\
+					\iff & \lambda = -\frac{1}{5}.
+				\end{aligned}
+			\end{equation*}
+			On en déduit:
+			\begin{equation*}
+				X = \left(1 - \frac{2}{5}, 3 - \frac{1}{5}, -2\right) = \left(\frac{3}{5}, \frac{14}{5}, -2\right).
+			\end{equation*}
+			La distance cherchée est donc:
+			\begin{equation*}
+				\begin{aligned}
+					d(M, \mathcal D) 
+					&= \nn{MX} \\
+					&= \sqrt{{\left(\frac{3}{5} - 1\right)}^2 + {\left(\frac{14}{5} - 2\right)}^2 + {(-2 - 3)}^2} \\
+					&= \sqrt{\frac{4}{25} + \frac{16}{25} + 25} \\
+					&= \sqrt{\frac{4 + 16 + 625}{25}} \\
+					&= \sqrt{\frac{645}{25}} \\
+					&= \frac{\sqrt{645}}{5}.
+				\end{aligned}
+			\end{equation*}
+
+			Deuxième méthode: on utilise la formule de la distance d'un point à une droite:
+			\begin{equation*}
+				d(M, \mathcal D) = \frac{\nn{AM \wedge u}}{\nn{u}}.
+			\end{equation*}
+			On a:
+			\begin{equation*}
+				AM = M - A = (1 - 1, 2 - 3, 3 - (-2)) = (0, -1, 5).
+			\end{equation*}
+			Calculons le produit vectoriel:
+			\begin{equation*}
+				AM \wedge u = 
+				\begin{vmatrix}
+					e_1 & e_2 & e_3\\
+					0 & -1 & 5\\
+					2 & 1 & 0
+				\end{vmatrix}
+				= e_1
+				\begin{vmatrix}
+					-1 & 5\\
+					1 & 0
+				\end{vmatrix}
+				- e_2
+				\begin{vmatrix}
+					0 & 5\\
+					2 & 0
+				\end{vmatrix}
+				+ e_3
+				\begin{vmatrix}
+					0 & -1\\
+					2 & 1
+				\end{vmatrix}
+				= -5e_1 + 10e_2 + 2e_3.
+			\end{equation*}
+			On en déduit:
+			\begin{equation*}
+				\nn{AM \wedge u} = \sqrt{{(-5)}^2 + 10^2 + 2^2} = \sqrt{25 + 100 + 4} = \sqrt{129}.
+			\end{equation*}
+			De plus:
+			\begin{equation*}
+				\nn{u} = \sqrt{2^2 + 1^2 + 0^2} = \sqrt{5}.
+			\end{equation*}
+			On trouve donc:
+			\begin{equation*}
+				\boxed{d(M, \mathcal D) = \frac{\sqrt{129}}{\sqrt{5}} = \frac{\sqrt{645}}{5}}.
+			\end{equation*}
+
+			\item De même, il y a plusieurs manières de calculer la distance d'un point à un plan.
+
+			Première méthode: on cherche le point \(Y\) du plan \(\mathcal P\) tel que le segment \(MY\) soit orthogonal au plan.
+			Le plan \(\mathcal P\) est orthogonal au vecteur normal \(n = (2, -3, 5)\). Ainsi, \(Y\) s'écrit:
+			\begin{equation*}
+				Y = M + \mu n = (1, 2, 3) + \mu(2, -3, 5) = (1 + 2\mu, 2 - 3\mu, 3 + 5\mu).
+			\end{equation*}
+			On cherche \(\mu\) tel que \(Y\) appartienne au plan, c'est-à-dire:
+			\begin{equation*}
+				\begin{aligned}
+					&2(1 + 2\mu) - 3(2 - 3\mu) + 5(3 + 5\mu) = 7\\
+					\iff & 2 + 4\mu - 6 + 9\mu + 15 + 25\mu = 7\\
+					\iff & 38\mu + 11 = 7\\
+					\iff & 38\mu = -4\\
+					\iff & \mu = -\frac{2}{19}.
+				\end{aligned}
+			\end{equation*}
+			On en déduit:
+			\begin{equation*}
+				\begin{aligned}
+					Y 
+					&= \left(1 - \frac{4}{19}, 2 + \frac{6}{19}, 3 - \frac{10}{19}\right)\\
+					&= \left(\frac{15}{19}, \frac{44}{19}, \frac{47}{19}\right).
+				\end{aligned}
+			\end{equation*}
+			La distance cherchée est donc:
+			\begin{equation*}
+				\begin{aligned}
+					d(M, \mathcal P) 
+					&= \nn{MY} \\
+					&= \sqrt{{\left(\frac{15}{19} - 1\right)}^2 + {\left(\frac{44}{19} - 2\right)}^2 + {\left(\frac{47}{19} - 3\right)}^2} \\
+					&= \sqrt{\frac{16}{361} + \frac{36}{361} + \frac{100}{361}} \\
+					&= \sqrt{\frac{16 + 36 + 100}{361}} \\
+					&= \sqrt{\frac{152}{361}} \\
+					&= \frac{\sqrt{152}}{19}.
+				\end{aligned}
+			\end{equation*}
+
+			Deuxième méthode: on utilise la formule de la distance d'un point à un plan:
+			\begin{equation*}
+				d(M, \mathcal P) = \frac{\n{ax_0 + by_0 + cz_0 + d}}{\sqrt{a^2 + b^2 + c^2}},
+			\end{equation*}
+			où \(ax + by + cz + d = 0\) est l'équation du plan et \(M = (x_0, y_0, z_0)\).
+			Ici, \(a = 2\), \(b = -3\), \(c = 5\) et \(d = -7\).
+			On a:
+			\begin{equation*}
+				\begin{aligned}
+					d(M, \mathcal P) 
+					&= \frac{\n{2 \cdot 1 - 3 \cdot 2 + 5 \cdot 3 - 7}}{\sqrt{2^2 + {(-3)}^2 + 5^2}}\\
+					&= \frac{\n{2 - 6 + 15 - 7}}{\sqrt{4 + 9 + 25}}\\
+					&= \frac{\n{4}}{\sqrt{38}}\\
+					&= \frac{4}{\sqrt{38}} = \frac{4\sqrt{38}}{38} = \frac{2\sqrt{38}}{19} = \frac{\sqrt{152}}{19}.
+				\end{aligned}
+			\end{equation*}
+			La distance cherchée est donc:
+			\begin{equation*}
+				\boxed{d(M, \mathcal P) = \frac{\sqrt{152}}{19}}.
 			\end{equation*}
 		\end{enumerate}
 	\end{td-sol}
