--- a/src/HAI701I/tds/td_1.tex
+++ b/src/HAI701I/tds/td_1.tex
@@ -86,12 +86,29 @@
 
 		Une fonction de coût possible est le nombre de traversées effectuées.
 
-		Le graphe des états est le suivant:
-		% https://www.lucidchart.com/invitations/accept/7f4e1f3e-3f4b-4e2b-9a4e-1c3f6f3e4b5c
-		% https://www.lucidchart.com/documents/edit/7f4e1f3e-3f4b-4e2b-9a4e-1c3f6f3e4b5c/0_0
-		% https://lucid.app/lucidchart/invitations/accept/7f4e1f3e-3f4b-4e2b-9a4e-1c3f6f3e4b5c
-		% INSERT GRAPH HERE
-		tmp
+		Le graphe des états est le suivant:\\
+		\begin{tikzpicture}[
+			state/.style={circle, draw, minimum size=0.5cm, font=\small, align=center},
+			edge/.style={<->,>=stealth,thick},
+			scale=0.8
+		]
+
+		% --- Nodes (placed manually with coordinates) ---
+		\node[state] (start) at (0,0) {$(3,3,G)$};
+		\node[state] (s1)    at (-4,0) {$(2,3,D)$};
+		\node[state] (s2)    at (4,0) {$(1,3,D)$};
+		\node[state] (s3)    at (0,-4) {$(2,2,D)$};
+		\node[state] (s4)    at (4, -4) {$(2,3,G)$};
+
+		% --- Edges with labels ---
+		\draw[edge] (start) -- node[above]{\(1C\)} (s1);
+		\draw[edge] (start) -- node[above]{\(2C\)} (s2);
+		\draw[edge] (start) -- node[right]{\(1M,1C\)} (s3);
+
+		\draw[edge] (s4) -- node[right]{\(1C\)} (s2);
+		\draw[edge] (s4) -- node[above]{\(1M\)} (s3);
+
+		\end{tikzpicture}
 	\end{td-sol}
 }{}
 
