--- a/src/HAI713I/tds/td_main.tex
+++ b/src/HAI713I/tds/td_main.tex
@@ -3,10 +3,10 @@
 \input{../../common/common_header.tex}
 \input{../../common/macros/math.tex}
 \input{../../common/macros/theorems.tex}
-% \input{../assets/module_header.tex}
+\input{../assets/module_header.tex}
 \usepackage[a4paper,hmargin=30mm,vmargin=30mm]{geometry}
 
-\title{\color{astral} \sffamily \bfseries Course Name --- TDs}
+\title{\color{astral} \sffamily \bfseries HAI713I --- TDs}
 \author{Ivan Lejeune}
 \date{\today}
 
