--- a/src/HAI713I/cours/cours_main.tex
+++ b/src/HAI713I/cours/cours_main.tex
@@ -3,7 +3,7 @@
 \input{../../common/common_header.tex}
 \input{../../common/macros/math.tex}
 \input{../../common/macros/theorems.tex}
-% \input{../assets/module_header.tex}
+\input{../assets/module_header.tex}
 \usepackage[a4paper,hmargin=30mm,vmargin=30mm]{geometry}
 
 \title{\color{astral} \sffamily \bfseries Course Name --- Cours}
@@ -16,16 +16,9 @@
     \tableofcontents
     
     \newpage
-    \suprasection*{Chapitre 1 --- Chapter 1 title}\label{sec:CH1}
-    \addcontentsline{toc}{suprasection}{Chapitre 1 --- Chapter 1 title}
-    \setcounter{suprasection}{1}
-    \setcounter{section}{0}
+    \section*{Chapitre 1 --- Calculabilité}\label{sec:CH1}
+    \addcontentsline{toc}{section}{\nameref{sec:CH1}}
+    \setcounter{section}{1}
     \input{../cours/chapter_1.tex}
-    
-    \newpage
-    \suprasection*{Chapitre 2 --- Chapter 2 title}\label{sec:CH2}
-    \addcontentsline{toc}{suprasection}{Chapitre 2 --- Chapter 2 title}
-    \setcounter{suprasection}{2}
-    \setcounter{section}{0}
-    \input{../cours/chapter_2.tex}
+
 \end{document}
