--- a/src/HAI709I/tds/td_main.tex
+++ b/src/HAI709I/tds/td_main.tex
@@ -25,11 +25,11 @@
     \setcounter{tdcounter}{0}
     \input{../tds/td_1.tex}
 
-    %\newpage
-    %\section*{TD2 --- Second sheet title}\label{sec:TD2}
-    %\addcontentsline{toc}{section}{\nameref{sec:TD2}}
-    %\setcounter{section}{2}
-    %\setcounter{tdcounter}{0}
-    %\input{../tds/td_2.tex}
+    \newpage
+    \section*{TD2}\label{sec:TD2}
+    \addcontentsline{toc}{section}{\nameref{sec:TD2}}
+    \setcounter{section}{2}
+    \setcounter{tdcounter}{0}
+    \input{../tds/td_2.tex}
 \end{document}
 
