--- a/src/HAI709I/tds/td_2.tex
+++ b/src/HAI709I/tds/td_2.tex
@@ -62,7 +62,57 @@
 % ----- Solutions exo 2 ----- %
 \iftoggle{showsolutions}{
 	\begin{td-sol}[]\ %
-		
+		On a
+		\begin{equation*}
+			\begin{aligned}
+				&\bb P(\text{PrivK}^{eav}_{\mathcal{A}, \Pi} = 1)\\
+				=& \bb P(b' = b)\\
+				=& \sum_{i=1}^3 \bb P(t=i) \cdot \bb P(b'=b\ \mid\ t=i)\\
+				=& \frac13 \sum_{i=1}^3 \bb P(b'=b\ \mid\ t=i)
+			\end{aligned}
+		\end{equation*}
+		\(\mathcal A\) recoit \(c_1,c_2,c_3\), choisit \(m_0= (0,0,0)\) et \(m_1=(0,1,2)\) et produit \(b'=0\). Si \(c_1=c_2\) ou \(c_2=c_3\), alors,
+		pour \(t=1\):
+		\begin{equation*}
+			\begin{aligned}
+				\bb P(b'=b \ \mid\ t=1)
+				&= \bb P(b=0) \cdot \bb P(b'=0\ \mid\ t=1 \wedge b=0)\\
+				&+ \bb P(b=1)\cdot \bb P(b'=1\ \mid\ t=1 \wedge b=1)\\
+				&= \frac12\cdot1+\frac12\cdot1\\
+				&=1,
+			\end{aligned}
+		\end{equation*}
+		pour \(t=2\):
+		\begin{equation*}
+			\begin{aligned}
+				\bb P(b'=b \ \mid\ t=2)
+				&= \bb P(b=0) \cdot \bb P(b'=0\ \mid\ t=2 \wedge b=0)\\
+				&+ \bb P(b=1)\cdot \bb P(b'=1\ \mid\ t=2 \wedge b=1)\\
+				&= \frac12\cdot1+\frac12\cdot\left(1-\frac1{26}\right)\\
+				&=\frac{51}{52},
+			\end{aligned}
+		\end{equation*}
+		pour \(t=3\):
+		\begin{equation*}
+			\begin{aligned}
+				\bb P(b'=b \ \mid\ t=3)
+				&= \bb P(b=0) \cdot \bb P(b'=0\ \mid\ t=3 \wedge b=0)\\
+				&+ \bb P(b=1)\cdot \bb P(b'=1\ \mid\ t=3 \wedge b=1)\\
+				&= \frac12\cdot p + \frac12\cdot\left(1-p\right)\\
+				&=\frac12.
+			\end{aligned}
+		\end{equation*}
+		Ce qui donne
+		\begin{equation*}
+			\begin{aligned}
+				\bb P(\text{PrivK}^{eav}_{\mathcal{A}, \Pi} = 1)
+				&= \frac13 \sum_{i=1}^3 \bb P(b'=b\ \mid\ t=i)\\
+				&= \frac13\cdot 1+\frac13\cdot\frac{51}{52}+\frac13\cdot\frac12\\
+				% avec l'autre méthode, ca devient
+				&= \frac13+\frac13+\frac13\cdot12=\frac56 > \frac34
+			\end{aligned}
+		\end{equation*}
+		% si c1 = c3, on choisit b'=0, si c1 = c3-2, on choisit b'=1, sinon, au pif, disons b'=0 -> GO REFAIRE TOUS LES CALCULS :DDDDDDD
 	\end{td-sol}
 }{}
 
