fixed chktex 17 in td 713

--- a/src/HAI713I/tds/td_1.tex
+++ b/src/HAI713I/tds/td_1.tex
@@ -209,7 +209,7 @@
 % ----- Consignes exo 4 ----- %
 \begin{td-exo}[Ensembles énumérables] % 4
 	On veut montrer que les propositions suivantes sont équivalentes:
-	\begin{enumerate}[label=\roman*)] % chktex 9 chktex 10
+	\begin{enumerate}[label=(\roman*)] % chktex 36
 		\item \(E\) est \defemph{énumérable} (rappel de la définition) si
 		\begin{equation*}
 			\exists a, E = W_a = \left\{x, [a\mid x]\downarrow\right\}
